--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -99,3 +99,10 @@
         bottom: var(--distance, 10rem);
    }
 }
+
+@media all and (max-width: 480px) { 
+
+    .footerMore {
+        width: 150px;
+    }
+}
