--- a/src/app/components/carousel-education/carousel-education.component.html
+++ b/src/app/components/carousel-education/carousel-education.component.html
@@ -1,7 +1,25 @@
 <swiper 
-[navigation]="true" class="swiperEducation"
-[slidesPerView]="3"
-[spaceBetween]="-250"
+[navigation]="true" 
+class="swiperEducation"
+[slidesPerView]="2"
+[breakpoints]="{
+    '1440': {
+        slidesPerView: 3,
+        spaceBetween: -175
+    },
+    '1024': {
+        slidesPerView: 3,
+        spaceBetween: -105
+    },
+    '768': {
+        slidesPerView: 2,
+        spaceBetween: -130
+    },
+    '375': {
+        slidesPerView: 2,
+        spaceBetween: -45
+    }
+}"
 >
     <ng-template swiperSlide class="swiperSlideEducation">
         <div class="cardEdu">
