--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -28,3 +28,61 @@ header div {
 .fa {
     width: 20px;
 }
+
+/* Default screen size (1440-1024) */
+
+@media all and (min-width: 1024px) and (max-width: 1440px) {
+
+    .apLogo {
+        padding: 25px 40px;
+    }
+}
+
+/* Landscape tablet size (1024-768) */
+
+@media all and (min-width: 768px) and (max-width: 1024px)  {
+    
+    .apLogo {
+        padding: 25px 40px;
+    }
+}
+
+ /* Tablet size (768-480) */
+
+ @media all and (min-width: 480px) and (max-width: 768px) { 
+
+    header div {
+        padding: 10px 50px;
+        width: 150px;
+        font-size: 15px;
+    }
+    
+    .apLogo {
+        padding: 25px 30px;
+        width: 150px;
+    }
+    
+    .fa {
+        width: 18px;
+    }
+ }
+  
+ /* Phone size (480-menos ) */
+
+ @media all and (max-width: 480px) { 
+
+    header div {
+        padding: 10px 50px;
+        width: 100px;
+        font-size: 12px;
+    }
+    
+    .apLogo {
+        padding: 5px 25px;
+        width: 100px;
+    }
+    
+    .fa {
+        width: 10px;
+    }
+ }
