--- a/src/app/components/percentages-skills/percentages-skills.component.css
+++ b/src/app/components/percentages-skills/percentages-skills.component.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px 200px 50px 200px;
+    padding: 60px 200px 50px 200px;
 }
 
 .skillCard {
@@ -17,6 +17,23 @@
     position: relative;
     top: -4.5vw;
     letter-spacing: 1px;
+}
+
+/* Classes to give different colors to ratings, based on their score */
+
+.rating.good {
+    background: var(--rating-color-good);
+    color: transparent;
+}
+
+.rating.meh {
+    background: var(--rating-color-meh);
+    color: transparent;
+}
+
+.rating.bad {
+    background: var(--rating-color-bad);
+    color: transparent;
 }
 
 @media all and (min-width: 768px) {
@@ -70,34 +87,17 @@
         border-radius: inherit;
         z-index: 2;
     }
-
-    /* Classes to give different colors to ratings, based on their score */
-
-    .rating.good {
-        background: var(--rating-color-good);
-        color: var(--rating-color-good);
-    }
-  
-    .rating.meh {
-        background: var(--rating-color-meh);
-        color: var(--rating-color-meh);
-    }
-  
-    .rating.bad {
-        background: var(--rating-color-bad);
-        color: var(--rating-color-bad);
-    }
 }
 
-/* Default screen size (1280-1024) */
+/* Default screen size (1440-1024) */
 
-@media all and (min-width: 1024px) and (max-width: 1280px) {
+@media all and (min-width: 1024px) and (max-width: 1440px) {
 
     .skillCard {
         padding: 0 40px;
         text-align: center;
         --rating-size: 130px;
-        --bar-size: 18px;
+        --bar-size: 15px;
     }
 
     .skillCard h4 {
@@ -115,7 +115,7 @@
         padding: 0 30px;
         text-align: center;
         --rating-size: 100px;
-        --bar-size: 12px;
+        --bar-size: 13px;
     }
 
     .skillCard h4 {
@@ -152,22 +152,26 @@
     .containerSkills {
         display: flex;
         position: relative;
-        flex-direction: column;
-        padding: 0;
-        left: 0;
+        flex-wrap: wrap;
+        width: 100%;
+        padding: 10px 0 80px 0;
     }
 
     .skillCard {
-        --rating-size: 100px;
+        --rating-size: 100%;
         --bar-size: 12px;
-        padding: 20px 0;
+        padding-top: 10px;
         text-align: left;
+        width: 70%;
+        margin: auto;
     }
 
     .skillCard h4 {
-        margin-top: 20px;
+        position: relative;
+        bottom: 100%;
         letter-spacing: 1px;
-        font-size: small;
+        font-weight: 400;
+        font-size: 10px;
     }
 
     .rating {
@@ -177,16 +181,27 @@
         justify-content: center;
         overflow: hidden;
         background: var(--celeste);
-        color: transparent;
         width: var(--rating-size);
         height: 10px;
+        top: 22px;
         z-index: 2;
     }
 
     /* Bar background */
 
     .rating-mask {
-        display: none;
+        position: relative;
+        bottom: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden;
+        background: var(--grisMedio);
+        color: var(--celeste);
+        width: var(--rating-size);
+        height: 10px;
+        top: 12px;
+        z-index: 1;
     }
   
     /* Bar mask, creates an inner circle with the same color as thee background */
