carpeta docs eliminada

--- a/src/app/components/carousel-projects/carousel-projects.component.html
+++ b/src/app/components/carousel-projects/carousel-projects.component.html
@@ -21,7 +21,7 @@
     <ng-template swiperSlide class="swiperSlideProjects">
         <div class="projectCard">
             <div class="cardImg">
-                <img src="../assets/img/DiseñoWebMR.jpg" alt="">
+                <img src="../../../assets/img/DiseñoWebMR.jpg" alt="">
             </div>
             <div class="cardInfo">
                 <h4>MR Construcciones</h4>
@@ -35,7 +35,7 @@
     <ng-template swiperSlide class="swiperSlideProjects">
         <div class="projectCard">
             <div class="cardImg">
-                <img src="../assets/img/DiseñoPortfolio.jpg" alt="">
+                <img src="../../../assets/img/DiseñoPortfolio.jpg" alt="">
             </div>
             <div class="cardInfo">
                 <h4>Mi Portfolio Web</h4>
@@ -49,7 +49,7 @@
     <ng-template swiperSlide class="swiperSlideProjects">
         <div class="projectCard">
             <div class="cardImg">
-                <img src="../assets/img/DiseñoWebMR.jpg" alt="">
+                <img src="../../../assets/img/DiseñoWebMR.jpg" alt="">
             </div>
             <div class="cardInfo">
                 <h4>Crafting</h4>
