--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,8 +33,8 @@
             <div><a href="#">Contact me</a></div>
         </div>
         <div class="footerLink">
-            <div><a href="https://www.instagram.com/kllosso/"><img src="../assets/icons/instagram.svg" alt="Link to Instagram" class="fa instagram" target="_blank" rel="noopener noreferrer"></a></div>
-            <div><a href="https://www.linkedin.com/in/florencia-collosso/"><img src="../assets/icons/linkedin-in.svg" alt="Link to Linkedin" class="fa linkedin" target="_blank" rel="noopener noreferrer"></a></div>
+            <div><a href="https://www.instagram.com/kllosso/"><img src="../../../assets/icons/instagram.svg" alt="Link to Instagram" class="fa instagram" target="_blank" rel="noopener noreferrer"></a></div>
+            <div><a href="https://www.linkedin.com/in/florencia-collosso/"><img src="../../../assets/icons/linkedin-in.svg" alt="Link to Linkedin" class="fa linkedin" target="_blank" rel="noopener noreferrer"></a></div>
         </div>
       </div>
   </div>
