--- a/src/app/components/gallery-works/gallery-works.component.html
+++ b/src/app/components/gallery-works/gallery-works.component.html
@@ -1,6 +1,6 @@
 <div class="divWorks">
     <div class="containerWork">
-        <img src="../assets/img/O'chaMockup.jpg" alt="O'cha Mockup" class="imgWork">
+        <img src="../../../assets/img/O'chaMockup.jpg" alt="O'cha Mockup" class="imgWork">
        <div class="textContainerWork">
             <h3 class="t-stroke">O'cha<span>O'cha</span></h3>
             <h4>Freelancer</h4>
@@ -25,7 +25,7 @@
         </div> 
     </div>
     <div class="containerWork">
-        <img src="../assets/img/FPfixLogoMockup.jpg" alt="Logo FPFIX" class="imgWork">
+        <img src="../../../assets/img/FPfixLogoMockup.jpg" alt="Logo FPFIX" class="imgWork">
         <div class="textContainerWork">
             <h3 class="t-stroke">FPFIX<span>FPFIX</span></h3>
             <h4>Freelancer</h4>
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="containerWork">
-        <img src="../assets/img/DiseñoWebMR.jpg" alt="MRconstrucciones Diseño Web" class="imgWork">
+        <img src="../../../assets/img/DiseñoWebMR.jpg" alt="MRconstrucciones Diseño Web" class="imgWork">
         <div class="textContainerWork">
             <h3 class="t-stroke">MRcons<span>MRcons</span></h3>
             <h4>Freelancer</h4>
