login e interceptor aplicados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,35 +9,9 @@
 </head>
 <body>
 
-    <app-header></app-header>
-
-    <!-- Portada -->
-
-    <app-cover></app-cover>
-
-    <!-- About  -->
-
-    <app-about></app-about>
-
-    <!-- Education -->
-
-    <app-education></app-education>
-
-    <!-- Works -->
-
-    <app-works></app-works>
-  
-    <!-- Projects -->
-
-    <app-projects></app-projects>
-
-    <!-- Skills -->
-
-    <app-skills></app-skills>
-
-    <!-- Footer -->
-
-    <app-footer></app-footer>
+    <div>
+        <router-outlet></router-outlet>
+    </div>
 
 </body>
 </html>
