--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
     <div>
         <a href="https://www.linkedin.com/in/florencia-collosso/"><img src="../../../assets/icons/linkedin-in.svg" alt="Link to Linkedin" class="fa linkedin" target="_blank" rel="noopener noreferrer"></a>
         <a href="https://www.instagram.com/kllosso/"><img src="../../../assets/icons/instagram.svg" alt="Link to Instagram" class="fa instagram" target="_blank" rel="noopener noreferrer"></a>
-        <a href="">Login</a>
+        <button (click)="login()" *ngIf="!isLoggedIn">Login</button>
+        <button (click)="onLogout()" *ngIf="isLoggedIn">Logout</button>
     </div>
 </header>
