componentes de works terminados

--- a/src/app/components/gallery-works/gallery-works.component.html
+++ b/src/app/components/gallery-works/gallery-works.component.html
@@ -1,64 +1,21 @@
-<div class="divWorks">
-    <div class="containerWork">
-        <img src="../../../assets/img/O'chaMockup.jpg" alt="O'cha Mockup" class="imgWork">
-       <div class="textContainerWork">
-            <h3 class="t-stroke">O'cha<span>O'cha</span></h3>
-            <h4>Freelancer</h4>
-            <h5>Abr 2020</h5>
-            <ul>
-                <li>Tarjeta de invitación</li>
-            </ul>
-       </div> 
-    </div>
-    <div class="containerWork">
-        <img src="../../../assets/img/CraftingBusinessCard.jpg" alt="Tarjetas Crafting" class="imgWork">
-        <div class="textContainerWork">
-            <h3 class="t-stroke">Crafting<span>Crafting</span></h3>
-            <h4>Freelancer</h4>
-            <h5>Abr 2020 - Presente</h5>
-            <ul>
-                <li>Diseño de marca</li>
-                <li>diseño y modelado 3D</li>
-                <li>Fotografía</li>
-                <li>diseño y administración de redes sociales</li>
-            </ul>
-        </div> 
-    </div>
-    <div class="containerWork">
-        <img src="../../../assets/img/FPfixLogoMockup.jpg" alt="Logo FPFIX" class="imgWork">
-        <div class="textContainerWork">
-            <h3 class="t-stroke">FPFIX<span>FPFIX</span></h3>
-            <h4>Freelancer</h4>
-            <h5>Oct 2021 - Nov 2021</h5>
-            <ul>
-                <li>Diseño de logo</li>
-                <li>Diseño de papelería</li>
-                <li>Diseño de redes sociales</li>
-            </ul>
+<div class="containerWorks">
+    <button class="buttonAdd" type="button" routerLink="/nuevaexp" *ngIf="isLoggedIn"><img src="../../../assets/icons/plus-solid.svg" alt="Botón editar"></button>
+    <div class="divWorks">
+        <div class="containerWork" *ngFor="let Works of works">
+                <img [src]="Works.imgExp" class="imgWork">
+                <div class="hoverContainer">
+                    <ul class="textContainerWork">
+                        <li><h3 class="t-stroke">{{Works.nombreE}}<span>{{Works.nombreE}}</span></h3></li>
+                        <li><h4>{{Works.puesto}}</h4></li>
+                        <li><h5>{{Works.fechaExp}}</h5></li>
+                        <li><h6>{{Works.descExp}}</h6></li>
+                    </ul>
+                    <div class="workButtons" *ngIf="isLoggedIn">
+                        <button class="buttonEdit"><img src="../../../assets/icons/pen-solid.svg" alt="Botón editar" routerLink="/editexp/{{Works.id}}"></button> 
+                        <button class="buttonDelete"><img src="../../../assets/icons/trash-solid.svg" alt="Botón borrar" (click)="delete(Works.id)"></button> 
+                    </div>
+               </div>
         </div>
     </div>
-    <div class="containerWork">
-        <img src="../../../assets/img/DiseñoWebMR.jpg" alt="MRconstrucciones Diseño Web" class="imgWork">
-        <div class="textContainerWork">
-            <h3 class="t-stroke">MRcons<span>MRcons</span></h3>
-            <h4>Freelancer</h4>
-            <h5>Oct 2021 - Presente</h5>
-            <ul>
-                <li>Diseño de logo</li>
-                <li>Diseño de papelería</li>
-                <li>Diseño y desarrollo web</li>
-            </ul>
-        </div>
-    </div>
-    <div class="containerWork">
-        <img src="../../../assets/img/CatalogoAlBordeLlama.jpg" alt="Catálogo Al Borde Llama" class="imgWork">
-       <div class="textContainerWork">
-            <h3 class="t-stroke">ABL<span>ABL</span></h3>
-            <h4>Freelancer</h4>
-            <h5>Ago 2021</h5>
-            <ul>
-                <li>Diseño de catálogo</li>
-            </ul>
-       </div> 
-    </div> 
+    
 </div>
