--- a/src/app/components/gallery-works/gallery-works.component.css
+++ b/src/app/components/gallery-works/gallery-works.component.css
@@ -1,9 +1,68 @@
+li {
+    list-style: none;
+}
+
+.workButtons {
+    width: 100%;
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+}
+
+.workButtons img{
+    height: 20px;
+    cursor: pointer;
+}
+
+.workButtons button {
+    height: 40px;
+    width: 40px;
+    background: transparent;
+    cursor: pointer;
+    border: none;
+    margin: 0 5px;
+}
+
+.workButtons button:hover {
+    transition: .2s ease-in;
+    transform: scale(1.2);
+}
+
+.buttonAdd {
+    cursor: pointer;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background: transparent;
+    position: absolute;
+    right: 170px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.buttonAdd:hover {
+    transition: .2s ease-in;
+    transform: scale(1.2);
+}
+
+.buttonAdd img {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+
 .containerWork {
     overflow: hidden;
     height: 350px;
     width: 500px;
     position: relative;
     margin: 10px;
+    border: none;
 }
 
 .imgWork {
@@ -16,17 +75,16 @@
 }
 
 .divWorks {
-    padding: 0 80px;
+    padding: 110px 80px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
 
-.textContainerWork {
+.hoverContainer {
     background: rgba(0, 0, 0, 0.8);
     position: absolute;
-    padding: 20px 30px;
     top: 0;
     left: 0;
     height: 100%;
@@ -35,7 +93,7 @@
     width: 100%;
 }
   
-.containerWork:hover .textContainerWork {
+.containerWork:hover .hoverContainer {
     z-index: 1;
     opacity: 1;
 }
@@ -59,6 +117,10 @@
     top: -3px;
 }
 
+.textContainerWork {
+    padding: 20px 30px;
+}
+
 .textContainerWork h4 {
     color: #fff;
     letter-spacing: 2px;
@@ -75,9 +137,11 @@
     margin-bottom: 10px;
 }
 
-.textContainerWork li {
+.textContainerWork h6 {
     color: #fff;
-    list-style-type: none;
+    width: 70%;
+    font-size: medium;
+    font-weight: 300;
     padding-bottom: 4px;
 }
 
@@ -85,6 +149,18 @@
 /* Default screen size (1440-1024) */
 
 @media all and (min-width: 1024px) and (max-width: 1440px) {
+
+    .buttonAdd {
+        margin-top: 12px;
+        width: 50px;
+        height: 50px;
+        right: 210px;
+    }
+
+    .buttonAdd img {
+        width: 23px;
+        height: 23px;
+    }
 
     .textContainerWork {
         padding: 30px 40px;
@@ -104,10 +180,31 @@
     } 
 }
 
+@media all and (min-width: 950px) and (max-width: 1280px) {
+    
+    .buttonAdd {
+        margin-top: 15px;
+        right: 125px;
+    }
+
+}
+
 /* Landscape tablet size (1024-768) */
 
 @media all and (min-width: 768px) and (max-width: 1024px)  {
 
+    .buttonAdd {
+        margin-top: 15px;
+        width: 45px;
+        height: 45px;
+        right: 130px;
+    }
+
+    .buttonAdd img {
+        width: 20px;
+        height: 20px;
+    }
+    
     .containerWork {
         height: 520px;
         width: 750px;
@@ -135,6 +232,18 @@
 
  @media all and (min-width: 480px) and (max-width: 768px) { 
 
+    .buttonAdd {
+        margin-top: 30px;
+        width: 40px;
+        height: 40px;
+        right: 90px;
+    }
+
+    .buttonAdd img {
+        width: 17px;
+        height: 17px;
+    }
+    
     .containerWork {
         height: 420px;
         width: 580px;
@@ -145,11 +254,11 @@
     }
 
     .textContainerWork h4 {
-        font-size: 4vw;
+        font-size: 35px;
     }
 
     .textContainerWork h5  {
-        font-size: 1.8vw;
+        font-size: 16px;
         margin-bottom: 12px;
     }
 
@@ -162,8 +271,20 @@
 
  @media all and (max-width: 480px) { 
 
+    .buttonAdd {
+        width: 25px;
+        height: 25px;
+        right: 50px;
+        bottom: 1210px;
+    }
+
+    .buttonAdd img {
+        width: 11px;
+        height: 11px;
+    }
+    
     .divWorks {
-        padding: 0 40px;
+        padding: 20px 40px;
     }
 
     .containerWork {
@@ -176,12 +297,19 @@
     }
 
     .textContainerWork h4 {
-        font-size: 4vw;
+        font-size: 15px;
     }
 
     .textContainerWork h5  {
-        font-size: 1.8vw;
-        margin-bottom: 12px;
+        font-size: 8px;
+        margin-bottom: 5px;
+    }
+
+    .textContainerWork h6 {
+        color: #fff;
+        width: 70%;
+        font-size: 10px;
+        font-weight: 300;
     }
 
     .t-stroke {
