--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -34,6 +34,7 @@ header button {
     border: none;
     color: #fff;
     font-size: 18px;
+    cursor: pointer;
 }
 
 /* Default screen size (1440-1024) */
