--- a/src/app/components/start-session/start-session.component.html
+++ b/src/app/components/start-session/start-session.component.html
@@ -6,10 +6,10 @@
       </video>
     <div class="login-box">
         <h2>Login</h2>
-        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
+        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate autocomplete="off">
           <div class="user-box">
             <input type="text" id="nombreUsuario" name="nombreUsuario" [(ngModel)]="nombreUsuario" required>
-            <label for="nombreUsuario">Email</label>
+            <label for="nombreUsuario">Usuario</label>
           </div>
           <div class="user-box">
             <input type="password" id="password" name="password" [(ngModel)]="password" required>
