--- a/src/app/components/carousel-education/new-edu.component.css
+++ b/src/app/components/carousel-education/new-edu.component.css
@@ -1,4 +1,4 @@
-.newExp-background {
+.newEdu-background {
     backdrop-filter: blur(5px);
     position: fixed;
     width: 100%;
@@ -8,7 +8,7 @@
     z-index: 5;
 }
 
-.newExp-box {
+.newEdu-box {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -21,7 +21,7 @@
     border-radius: 10px;
 }
 
-.newExp-box h2 {
+.newEdu-box h2 {
     margin: 0 0 30px;
     padding: 0;
     color: #fff;
@@ -29,11 +29,11 @@
     font-size: 2vw;
 }
 
-.newExp-box .newExpInput-box {
+.newEdu-box .newEduInput-box {
     position: relative;
 }
 
-.newExp-box .newExpInput-box input {
+.newEdu-box .newEduInput-box input {
     width: 100%;
     padding: 10px 0;
     font-size: 22px;
@@ -44,7 +44,7 @@
     outline: none;
     background: transparent;
 }
-.newExp-box .newExpInput-box label {
+.newEdu-box .newEduInput-box label {
     position: absolute;
     top:0;
     left: 0;
@@ -55,15 +55,15 @@
     transition: .5s;
 }
 
-.newExp-box .newExpInput-box input:focus ~ label,
-.newExp-box .newExpInput-box input:valid ~ label {
+.newEdu-box .newEduInput-box input:focus ~ label,
+.newEdu-box .newEduInput-box input:valid ~ label {
     top: -24px;
     left: 0;
     color: var(--celeste);
     font-size: 18px;
 }
 
-.newExp-box button {
+.newEdu-box button {
     position: relative;
     display: inline-block;
     padding: 15px 25px;
@@ -80,7 +80,7 @@
     cursor: pointer;
 }
 
-.newExp-box button:hover {
+.newEdu-box button:hover {
     background-color: var(--celeste);
     color: #fff;
     border-radius: 5px;
@@ -90,12 +90,12 @@
                 0 0 100px var(--celeste);
 }
 
-.newExp-box button span {
+.newEdu-box button span {
     position: absolute;
     display: block;
 }
 
-.newExp-box button span:nth-child(1) {
+.newEdu-box button span:nth-child(1) {
     top: 0;
     left: -100%;
     width: 100%;
@@ -113,7 +113,7 @@
     }
 }
 
-.newExp-box button span:nth-child(2) {
+.newEdu-box button span:nth-child(2) {
     top: -100%;
     right: 0;
     width: 2px;
@@ -132,7 +132,7 @@
     }
 }
 
-.newExp-box button span:nth-child(3) {
+.newEdu-box button span:nth-child(3) {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -151,7 +151,7 @@
     }
 }
 
-.newExp-box button span:nth-child(4) {
+.newEdu-box button span:nth-child(4) {
     bottom: -100%;
     left: 0;
     width: 2px;
